...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close channel"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "USD → BTC"
          }
        },
...
          "stringUnit" : {
            "state" : "new",
            "value" : "Confirm Order"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Generate Invoice"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Receive"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "BTC → USD"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Send"
          }
        },
...
          "stringUnit" : {
            "state" : "new",
            "value" : "Confirmed"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "To"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Onchain Account"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Onchain Address"
          }
        },
...
          "stringUnit" : {
            "state" : "new",
            "value" : "Channel"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Received"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Lightning"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settlement"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Splice Out"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stability"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "History"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "0.00"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Invoice or onchain address"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Payments"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Review USD -> BTC"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Send All"
          }
        },
...
