...
                )
                NeutralTextButton(
                    onClick = { sendAll = !sendAll },
                    contentPadding = PaddingValues(horizontal = 8.dp, vertical = 4.dp),
                ) {
                    Text(
                        if (sendAll) "Enter Amount" else "Send Max",
                        style = MaterialTheme.typography.labelMedium,
                    )
                }
            }
            Spacer(Modifier.height(12.dp))

...
